--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 name: Deploy Ract App
 on: push
 jobs:
-  test:
+  deploy:
     runs-on: windows-latest
     steps:
       - name: Get repository code
@@ -10,25 +10,9 @@ jobs:
         run: npm ci
       - name: Test application
         run: npm run test
-  lint:
-    runs-on: windows-latest
-    needs: test
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
       - name: Lint application
         run: npm run lint
-  build:
-    runs-on: windows-latest
-    needs: lint
-    steps:
-      - name: Get repository code
-        uses: actions/checkout@v3
-      - name: Install dependencies
-        run: npm ci
-      - name: Build application
-        run: npm run build
+      - name: Lint application
+        run: npm run lint
       - name: Deploy
         run: echo deploying...
