--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Print Context
-        run: echo "${{ github }}"
+        run: echo "${{ toJSON(github) }}"
