--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,9 +3,11 @@ on:
   workflow_dispatch: 
   pull_request:
     types: [opened, edited, reopened]
+
 jobs:
   print:
     runs-on: windows-latest
     steps:
-      - name: Print Context
-        run: echo '${{ toJSON(github.event) }}'
+      - name: Print Context (pretty JSON)
+        run: |
+          '${{ toJSON(github) }}' | ConvertFrom-Json | ConvertTo-Json -Depth 100
