--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,10 @@
 name: Deploy Ract App
-on: push
+on: 
+  push:
+    branches:
+      - master
 jobs:
-  deploy:
+  test:
     runs-on: windows-latest
     steps:
       - name: Get repository code
@@ -10,9 +13,25 @@ jobs:
         run: npm ci
       - name: Test application
         run: npm run test
+  lint:
+    runs-on: windows-latest
+    needs: test
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
       - name: Lint application
         run: npm run lint
-      - name: Lint application
-        run: npm run lint
+  build:
+    runs-on: windows-latest
+    needs: lint
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Build application
+        run: npm run build
       - name: Deploy
         run: echo deploying...
