--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -15,6 +15,9 @@ jobs:
           echo "${{ env.GH_SECRET }}"
   deploy:
     runs-on: windows-latest
+    env:
+      NODE_ENV: production-deploy
+      GH_SECRET: 50
     steps:
       - name: Print Env Deploy
         run: |
